syntax = "proto3";

import "blockchain.proto";

message ExecutedHeader {
    bytes prevhash = 1;
    uint64 timestamp = 2;
    uint64 height = 3;
    bytes state_root = 4;
    bytes transactions_root = 5;
    bytes receipts_root = 6;
    bytes log_bloom = 7;
    uint64 gas_used = 8;
    uint64 gas_limit = 9;
}

enum ReceiptError {
    //ExecutionError
    NoTransactionPermission = 0;
    NoContractPermission = 1;
    NotEnoughBaseGas = 2;
    BlockGasLimitReached  = 3;
    AccountGasLimitReached  = 4;
    OutOfGas = 5;
    BadJumpDestination = 6;
    BadInstruction = 7;
    StackUnderflow = 8;
    OutOfStack = 9;
    Internal = 10;
}

message LogEntry {
    bytes address = 1;
    repeated bytes topics = 2;
    bytes data = 3;
}

message ReceiptErrorWithOption {
    ReceiptError error = 1;
}

message StateRoot {
    bytes state_root = 1;
}

message Receipt {
    StateRoot state_root = 1;
    string gas_used = 2;
    bytes log_bloom = 3;
    repeated LogEntry logs = 4;
    ReceiptErrorWithOption error = 5;
}

message ReceiptWithOption {
    Receipt receipt = 1;
}

message ExecutedInfo {
    ExecutedHeader header = 1;
    repeated ReceiptWithOption receipts = 3;
}

message ConsensusConfig {
    uint64 block_gas_limit = 1;
    AccountGasLimit account_gas_limit = 2;
    repeated bytes nodes = 3;
}

message ExecutedResult {
    ExecutedInfo executed_info = 1;
    ConsensusConfig config = 2;
}
